--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
